resources/assets/sass/partials/_documentation.scss
  .body-margin {
    margin-top: 75px;
  }
  .banner {
    padding: 100px;
  }
  .section {
    padding-top: 50px;
    padding-bottom: 50px;
  }
  .light-gray {
    background-color: #f9f9f9;
  }
  .dark-gray {
    background-color: #4A4A4A;
  }
  .csun-red {
    background-color: #CE1126;
  }
  .gradient {
    background: #ce1126; /* Old browsers */
    background: -moz-linear-gradient(top,  #ce1126 0%, #aa0f57 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ce1126), color-stop(100%,#aa0f57)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  #ce1126 0%,#aa0f57 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  #ce1126 0%,#aa0f57 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  #ce1126 0%,#aa0f57 100%); /* IE10+ */
    background: linear-gradient(to bottom,  #ce1126 0%,#aa0f57 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ce1126', endColorstr='#aa0f57',GradientType=0 ); /* IE6-9 */
  }
  .color-white {
    color: #fff;
  }
  .sect-num {
    position: absolute;
    top: 50%;
    right: 20px;
  }

.logo {
	background-color: #fff;
	z-index: 9;
}


.target:before {
  display: block; 
  content: " "; 
  margin-top: -185px; 
  height: 185px; 
}

#sidebar {
  padding-top: 45px;
  position: fixed;
}

.types {
  margin-bottom: 30px;
  padding: 30px 0;
}

.number-list {
	margin-top: 50px;

	&--type {
		border: solid 6px $brand-primary;
	    padding: 5px 10px;
	    border-radius: 100px;
	    margin-right: 15px;
	    font-weight: 900;
	    color: $brand-primary;
	    font-size: 17px;
	}

	&--title {
		font-weight: 600;
	    font-size: 17px;
	    text-transform: uppercase;
	}

	&--content {
		margin: 5px 0 30px 60px;
		font-size: 15px;
	}
}



.well {
    padding: 20px;
    border-left: solid 6px $brand-primary;
    background: $color-white;
    border-radius: 0 5px 5px 0;
}

#sidebar {
  position: fixed;
  overflow-y: scroll;

  li {
    list-style: none;
  }

  .active {
    text-decoration: underline;
  }
}

@media(min-width: $screen-sm){
  .docs-content{
    margin-left:25%;
  }
}


@media(max-width: $screen-sm){
  #sidebar {
    display: none;
  }
}

